--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-[package]
-name = "angi"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
+[workspace]
+resolver = "3"
+members = ["compiler", "vm"]
