--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 axum = { version = "0.8" }
 tokio = { version = "1.0", features = ["full"] }
+vm = { path = "../vm" }
