--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["compiler", "instructions", "server", "vm"]
+members = [ "angi", "instructions", "server", "vm"]
