--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 axum = { version = "0.8" }
 tokio = { version = "1.0", features = ["full"] }
 vm = { path = "../vm" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
